<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/notifikasi_action_button_color_big_text"
        android:onClick="sendOnChannel1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/inbox_style"
        android:onClick="sendOnChannel2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/big_picture_style"
        android:onClick="sendOnChannel3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/messaging_style_direct_reply"
        android:onClick="sendOnChannel4" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/progress_bar_notification"
        android:onClick="sendOnChannel5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/media_style"
        android:onClick="sendOnChannel6" />

</LinearLayout>